--- a/app/globals.css
+++ b/app/globals.css
@@ -20,6 +20,31 @@ li {
   list-style: none;
 }
 
+.hero {
+  width: 100%;
+  height: 100vh;
+  background-color: rgb(248, 244, 244);
+  overflow-x: hidden;
+}
+
+.hero-container {
+  width: 89%;
+  height: 100%;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  max-width: 1500px;
+  z-index: 2;
+}
+
+.hero-buttons {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  margin-top: 1.5rem;
+}
+
 .nav-menu a:hover {
   background: #fc466b;
   background: -webkit-linear-gradient(to right, #3f5efb, #fc466b);
@@ -33,6 +58,26 @@ li {
   background: #fc466b;
   background: -webkit-linear-gradient(to right, #3f5efb, #fc466b);
   background: linear-gradient(to right, #3f5efb, #fc466b);
+}
+
+.hero-container span {
+  background: #fc466b;
+  background: -webkit-linear-gradient(to right, #3f5efb, #fc466b);
+  background: linear-gradient(to right, #3f5efb, #fc466b);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.hero-socials-a {
+  font-size: 1.5rem;
+  background: #fc466b;
+  background: -webkit-linear-gradient(to right, #3f5efb, #fc466b);
+  background: linear-gradient(to right, #3f5efb, #fc466b);
+  color: #ffffff;
+  padding: 0.5rem;
+  border-radius: 50%;
+  display: flex;
 }
 
 @media only screen and (max-width: 768px) {
@@ -60,13 +105,82 @@ li {
     cursor: pointer;
   }
 
-  .hamburger.active .bar:nth-child(2){
+  .hamburger.active .bar:nth-child(2) {
     opacity: 0;
   }
-  .hamburger.active .bar:nth-child(1){
+
+  .hamburger.active .bar:nth-child(1) {
     transform: translateY(8px) rotate(45deg);
   }
-  .hamburger.active .bar:nth-child(3){
+
+  .hamburger.active .bar:nth-child(3) {
     transform: translateY(-8px) rotate(-45deg);
   }
+}
+
+@media only screen and (max-width: 780px) {
+  .hero {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .hero-container {
+    flex-direction: column;
+    height: fit-content;
+  }
+
+  .hero-heading {
+    order: 2;
+  }
+
+  .hero-container h1 {
+    text-align: center;
+    font-size: 45px;
+  }
+
+  .hero-container span {
+    font-size: 45px;
+  }
+
+  .hero-buttons {
+    justify-content: center;
+  }
+
+  .hero-socials {
+    justify-content: center;
+  }
+
+  .hero-image {
+    width: 300px;
+    height: 300px;
+  }
+}
+
+@media only screen and (min-width: 781px) and (max-width: 1130px) {
+  .hero-image {
+    width: 400px;
+    height: 400px;
+  }
+
+  .hero-container h1 {
+    font-size: 55px;
+  }
+
+  .hero-container span {
+    font-size: 55px;
+  }
+}
+
+
+/* Divider */
+
+.divider-container h1 {
+  background: #fc466b;
+  background: -webkit-linear-gradient(to right, #3f5efb, #fc466b);
+  background: linear-gradient(to right, #3f5efb, #fc466b);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+
 }
